--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "html-react-parser": "^1.4.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
+    "react": "next",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
